--- a/Technotheek.net Core/Views/Shared/_Layout.cshtml
+++ b/Technotheek.net Core/Views/Shared/_Layout.cshtml
@@ -30,24 +30,31 @@
                         <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                             @if (currentUser.FunctionType == "Admin")
                             {
-
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="SongAdmin">Add Song</a>
+                                </li>
+                                <li class="nav-item ml-auto">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserPage">Account</a>
+                                </li>
+                            </ul>
                             }
                             else
                             {
-                                <ul class="navbar-nav flex-grow-1">
-                                    <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Playlist">Playlists</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Customer">Discover</a>
-                                    </li>
-                                    <li class="nav-item ml-auto">
-                                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserPage">Account</a>
-                                    </li>
-                                </ul>
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Playlist">Playlists</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Customer">Discover</a>
+                            </li>
+                            <li class="nav-item ml-auto">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserPage">Account</a>
+                            </li>
+                        </ul>
                             }
                         </div>
                     </div>
